testsuite/bsc.typechecker/kind/DataDefResGivenNum.bs
package DataDefResGivenNum () where

data (Foo :: #) = Bar

